# aula13e14_bootcamp

./: README.md  pyproject.toml
data/csv_files/: 1.csv
src/: __main__.py
src/lib/classes/: AbstractDataSource.py  CsvSource.py  FilesSources.py  JsonSource.py  TxtSource.py
src/lib/classes/aws/: s3.py
