[tool.poetry]
name = "aula13e14-bootcamp"
version = "0.1.0"
description = ""
authors = ["LucasJFaust <lucasjfm.eng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
schedule = "^1.2.1"
boto3 = "^1.34.93"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
